tests/0024-closure-shadow-with-local.src.err
ERROR: Variable already defined 'foo'
 |     let foo = "shadow";
           ^
COMPILATION FAILED
